--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build --modern=server",
+    "dev-radiator:instant-send": "node server/utils/devRadiator/instantRunRadiator.js",
+    "build": "nuxt build --modern=server && npm run generate:eslint-report",
     "start": "nuxt start --modern=server",
     "generate": "nuxt generate",
     "lint": "npm run lint-vue-scss & npm run lint-scss & npm run lint-es",
@@ -29,6 +30,7 @@
     "test:e2e": "cypress run",
     "test:update:snapshot": "npm run test:unit -- -u",
     "generate:coverage-badges": "node ./jest/utils/generateCoverageBadges.js -output './client/static'",
+    "generate:eslint-report": "echo -n > client/static/eslint-report.json && eslint -o client/static/eslint-report.json -f compact -c .eslintrc --ext .js,.vue --ignore-path .gitignore .",
     "seo-analyze": "npm run build && npm run generate && node ./SEOAnalyzer/index.js",
     "slicemachine": "start-slicemachine --port 9999",
     "storybook": "nuxt storybook",
@@ -61,7 +63,9 @@
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "lottie-web": "^5.8.1",
+    "moment": "^2.29.3",
     "multer": "^1.4.2",
+    "node-schedule": "^2.1.0",
     "nuxt": "2.15.8",
     "nuxt-compress": "^5.0.0",
     "nuxt-lazy-load": "^1.2.6",
