Enabled seo-analyer on github actions for all branches except master. Removed seo-analyzer from pre-push

--- a/package.json
+++ b/package.json
@@ -125,8 +125,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run precommit",
-      "pre-push": "npm run seo-analyze"
+      "pre-commit": "npm run precommit"
     }
   },
   "snyk": true
