--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "form-data": "^4.0.0",
     "lottie-web": "^5.8.1",
     "moment": "^2.29.3",
+    "mongoose": "^6.3.3",
     "multer": "^1.4.2",
     "node-schedule": "^2.1.0",
     "nuxt": "2.15.8",
