MAR-3371. Fixed bugs in CardGridSlice.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -30,7 +30,8 @@
           "animation": {
             "content": "none"
           }
-        }
+        },
+        "items": {}
       },
       "cardGridWithIcon": {
         "primary": {},
