MAR-3389. Create new slice TechAndToolsNewSlice for tech stack.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -733,6 +733,12 @@
           }
         }
       }
+    },
+    "TechAndToolsNewSlice": {
+      "default-slice": {
+        "primary": {},
+        "items": {}
+      }
     }
   },
   "_cts": {
