MAR-3390. Created BuildAndRisksSlice

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -733,6 +733,25 @@
           }
         }
       }
+    },
+    "BuildAndRisksSlice": {
+      "default-slice": {
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          },
+          "description": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        },
+        "items": {}
+      }
     }
   },
   "_cts": {
