MAR-3390-new. Created a slice BuildAndRisksSlice and created tests

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -739,6 +739,24 @@
         "primary": {},
         "items": {}
       }
+    },
+    "BuildAndRisksSlice": {
+      "default-slice": {
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          },
+          "description": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
+      }
     }
   },
   "_cts": {
