--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "heroku-postbuild": "npm run build",
     "heroku-cleanup": "cd ./client; ls | grep -v static | grep -v modules | xargs rm -rfv",
     "snyk-protect": "snyk protect",
+    "prepare": "npm run snyk-protect",
     "test": "npm run test:unit",
     "test:unit": "node ./jest",
     "test:unit:node": "node ./jest -- --test=node",
