MAR-3331. Add a customer component, get data from prismic, update snapshots

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -757,11 +757,17 @@
           }
         }
       }
+    },
+    "CustomersSlice": {
+      "default-slice": {
+        "primary": {}
+      }
     }
   },
   "_cts": {
     "singleimage": {},
     "custom-page": {},
-    "video-block": {}
+    "video-block": {},
+    "customers": {}
   }
 }
