--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,9 @@ RECAPTCHA_SECRET_KEY=
 
 NODE_GA4_KEY=
 NODE_ANALYTICS_UNIVERSAL_KEY=
+
+#FACEBOOK TAGS
+FACEBOOK_CODE=
+
+#LINKEDIN TAGS
+LINKEDIN_PIXEL_ID=
