--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "node-schedule": "^2.1.0",
     "nuxt": "2.15.8",
     "nuxt-compress": "^5.0.0",
+    "nuxt-facebook-pixel-module": "^1.5.0",
     "nuxt-lazy-load": "^1.2.6",
+    "nuxt-linkedin-pixel-module": "^1.0.2",
     "nuxt-sm": "0.0.8",
     "prismjs": "^1.24.1",
     "sendpulse-api": "^1.1.4",
