--- a/.github/workflows/seo-analyzer.yml
+++ b/.github/workflows/seo-analyzer.yml
@@ -23,6 +23,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm run build
+        env:
+          NODE_PRISMIC_API: ${{ secrets.NODE_PRISMIC_API }}
+          RECAPTCHA_SITE_KEY: ${{ secrets.RECAPTCHA_SITE_KEY }}
+          RECAPTCHA_SECRET_KEY: ${{ secrets.RECAPTCHA_SECRET_KEY }}
+          CI: true
       - run: npm run generate
         env:
           NODE_PRISMIC_API: ${{ secrets.NODE_PRISMIC_API }}
@@ -30,3 +35,4 @@ jobs:
           RECAPTCHA_SECRET_KEY: ${{ secrets.RECAPTCHA_SECRET_KEY }}
           CI: true
       - run: node ./SEOAnalyzer/index.js
+      
