MAR-3610. Added SubscribeFormSlice.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -762,6 +762,11 @@
       "default-slice": {
         "primary": {}
       }
+    },
+    "SubscribeFormSlice": {
+      "default-slice": {
+        "primary": {}
+      }
     }
   },
   "_cts": {
