--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "build-storybook": "nuxt storybook build"
   },
   "dependencies": {
+    "@maddevs/mad-radiator": "4.0.0",
     "@aws-sdk/client-s3": "^3.32.0",
     "@aws-sdk/s3-request-presigner": "^3.32.0",
     "@nuxtjs/axios": "^5.13.1",
