--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "build-storybook": "nuxt storybook build"
   },
   "dependencies": {
-    "@maddevs/mad-radiator": "4.0.0",
     "@aws-sdk/client-s3": "^3.32.0",
     "@aws-sdk/s3-request-presigner": "^3.32.0",
+    "@maddevs/mad-radiator": "^4.1.0",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/prismic": "^1.3.1",
