MAR-3689. Create Achievement slice and add tests

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -767,6 +767,12 @@
       "default-slice": {
         "primary": {}
       }
+    },
+    "AchievementsSlice": {
+      "default-slice": {
+        "primary": {},
+        "items": {}
+      }
     }
   },
   "_cts": {
