MAR-3796. Redesigned github and twitter cards.

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "vue-select": "^3.11.2",
     "vue-slicezone": "^0.1.0",
     "vue-social-sharing": "^3.0.7",
+    "vue-tweet-embed": "^2.4.0",
     "vuelidate": "^0.7.6"
   },
   "devDependencies": {
