--- a/package.json
+++ b/package.json
@@ -130,7 +130,9 @@
     "vue-loader": "15.9.6"
   },
   "husky": {
-    "hooks": {}
+    "hooks": {
+      "pre-commit": "npm run precommit"
+    }
   },
   "snyk": true
 }
